# vertagger

./: .gitignore  config.py  pyproject.toml  requirements.txt
src/vertagger/: config.py  main.py
src/vertagger/api/: __init__.py  dependencies.py  v1_0.py
src/vertagger/api/v1_0/: config.py  endpoints.py  models.py  prompt.yaml  services.py
src/vertagger/api/v1_0/prompts/: 00_aufgabe.txt  01_personen.txt  02_organisationen.txt  03_regionen.txt  04_stichwoerter.txt  05_zusammenfassung.txt  06_userneeds.txt  07_lebenswelt.txt  08_iabcontent.txt  99_format.txt  prompt.txt
test/: conftest.py
test/api/: test_v1_0.py
